🚓💓 Checkpoint ./script.js:2209215/353 ./index.html:2209215/109

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/style.css" />
     <style>
       canvas {
-        width: 100%;
+        max-height: 80vh;
       }
     </style>
 
