--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       Like the title, which appears on the browser tab but not inside the page
       Further down you'll see the content that displays in the page
     -->
-    <title>Hello World!</title>
+    <title>Hello (Hill-Shaded) World!</title>
 
     <!-- The website stylesheet -->
     <link rel="stylesheet" href="/style.css" />
@@ -29,8 +29,20 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-    <h1>testing some hill shading</h1>
+    <h1>Let's test some hill shading</h1>
+    <p>
+      Move your mouse over the image to change the shading angle!
+    </p>
     <canvas id="cvs"></canvas>
+    
+    <p>
+      How does this work?
+    </p>
+    
+    <ul>
+      <li>We have a height map (the base image)</li>
+      <li>We can compute the "surface normal" for each pixel by looking at its four direct neighbours,  have a height map (the base image)</li>
+    </ul>
 
     <!-- The footer holds our remix button — you can keep or delete it ✂ -->
     <footer class="footer">
