--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </style>
 
     <!-- The website JavaScript file -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
     <script src="/script.js" defer></script>
   </head>
   <body>
