🌈💒 Checkpoint ./script.js:2209215/1362 ./index.html:2209215/42

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       Move your mouse over the image to change the shading angle!
 
       <select id="blendMode">
-        <option selected="selected">source-over</option>
+        <option>source-over</option>
         <option>source-in</option>
         <option>source-out</option>
         <option>source-atop</option>
@@ -51,7 +51,7 @@
         <option>overlay</option>
         <option>darken</option>
         <option>lighten</option>
-        <option>color-dodge</option>
+        <option selected="selected">color-dodge</option>
         <option>color-burn</option>
         <option>hard-light</option>
         <option>soft-light</option>
