🏮🐈 Checkpoint ./script.js:2209215/16022 ./index.html:2209215/40

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <option>overlay</option>
         <option>darken</option>
         <option>lighten</option>
-        <option selected="selected">color-dodge</option>
+        <option>color-dodge</option>
         <option>color-burn</option>
         <option>hard-light</option>
         <option>soft-light</option>
@@ -60,7 +60,7 @@
         <option>hue</option>
         <option>saturation</option>
         <option>color</option>
-        <option>luminosity</option>
+        <option selected="selected">luminosity</option>
       </select>
     </p>
 
