🍩🎮 Checkpoint ./index.html:2209215/28 ./color.js:2209215/6958 ./script.js:2209215/4128

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- The website JavaScript file -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
-    <script src="/script.js" defer></script>
+    <script src="/script.js" type="module" async></script>
   </head>
   <body>
     <h1>Let's test some hill shading</h1>
