🌇📉 Checkpoint ./index.html:2209215/20244 ./style.css:2209215/10413 ./script.js:2209215/299 ./.glitch-assets:2209215/484

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
     </figure>
 
     <p>
-      And we can can then "flood fill" the areas between these "iso lines" using
+      And we can can then fill in the areas between these
+      <a href="https://en.wikipedia.org/wiki/Contour_line">"isolines"</a> using
       some false color designed to look appropriate to the elevation we're
       coloring in, so: green for low altitudes, brown (less/no vegetation) for
       high altitudes, blue/white (snow) for really high altitudes:
@@ -101,8 +102,12 @@
 
     <p>
       If we then make the iso lines themslves less pronounced, we can overlay
-      our "shaded" black and white image using the "color-burn" method, (after
-      blurring it a little), to generate the general, subtle shading:
+      our "shaded" black and white image using the
+      <a href="https://en.wikipedia.org/wiki/Blend_modes#Dodge_and_burn"
+        >color-burn</a
+      >
+      method, (after blurring it a little), to generate the general, subtle
+      shading:
     </p>
 
     <figure>
@@ -119,7 +124,7 @@
 
     <figure>
       <img
-        src="https://cdn.glitch.global/6f093c76-7f96-4f52-94dd-2b1647bfb115/069137ae-8a87-43a3-9a0d-c9918ebafa41.image.png?v=1688154544586"
+        src="https://cdn.glitch.global/6f093c76-7f96-4f52-94dd-2b1647bfb115/6c53bf48-e957-49fb-942f-6018c14d3ce1.image.png?v=1688155820711"
       />
     </figure>
 
