--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <canvas id="cvs"></canvas>
 
-    <p>How does this work?</p>
+    <h2>How does this work?</h2>
 
     <p>We have a 16 bit grayscale DEM height map:</p>
 
@@ -31,8 +31,8 @@
     </figure>
 
     <p>
-      ...super exciting, let's level that a little so you can actually see what
-      data it captures:
+      ...uhh, okay yeah that's super exciting, let's level that a little so you
+      can actually see what it looks like:
     </p>
 
     <figure>
@@ -43,11 +43,19 @@
     </figure>
 
     <p>
-      We can compute the "surface normal" for each pixel by looking at its four
-      direct neighbours, creating a vector {a-b,c-d,2} where "a" and "b" are the
-      height at (x-1,y) and (x+1,y) respectively, and "c" and "d" are the height
-      at (x,y-1) and (x,y+1), respectively. If we normalize that vector and then
-      render it as if it were an {R,G,B} vector, that looks like:
+      We can compute the "surface normal" for each pixel, i.e. the vector that
+      tells us the 3D angle of the surface at that pixel, by looking at each
+      pixel's four direct neighbours. This is surprisingly simple: we just
+      create a vector <code>{x: a-b, y: c-d, z: 2}</code> where "a" and "b" are
+      the heights for the pixels at (x-1,y) and (x+1,y) respectively, and "c"
+      and "d" are the heights for the pixels at (x,y-1) and (x,y+1),
+      respectively.
+    </p>
+    <p>
+      If we then normalize that vector (i.e. scale it such that it has a total
+      length of 1) and render as RGB vector (so, pretending that "x" represents
+      the pixel's amount of red, "y" the amount of green, and "z" the amount of
+      blue) then we get:
     </p>
 
     <figure>
@@ -57,12 +65,13 @@
     </figure>
 
     <p>
-      We then compute how much light would get reflected "up" into the screen,
-      given an illumination vector, using the standard
+      We can then compute how much light would get reflected "up" into the
+      screen, given the sun at some specific position. If we also model that
+      position using an x/y/z vector then we can use the standard
       <a href="https://en.wikipedia.org/wiki/Reflection_(mathematics)"
         >vector reflection</a
       >
-      approach:
+      approach to yield something pretty funky:
     </p>
 
     <figure>
