👽🐘 Checkpoint ./style.css:2209215/5 ./index.html:2209215/90 ./script.js:2209215/1550

--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
       position of the cursor on the image, so that we can change the way the
       terrain gets lit simply by moving the cursor around!
     </p>
+    
+    <p>
+      — <a href="https://mastodon.social/@TheRealPomax">Pomax</a>
+    </p>
 
     <!-- The footer holds our remix button — you can keep or delete it ✂ -->
     <footer class="footer">
