⛹🌠 Checkpoint ./index.html:2209215/403 ./script.js:2209215/12919

--- a/index.html
+++ b/index.html
@@ -167,9 +167,13 @@
         src="https://cdn.glitch.global/6f093c76-7f96-4f52-94dd-2b1647bfb115/5f62ae82-a8e5-442d-8b17-cd8c5ef1baf0.image.png?v=1688154522358"
       />
     </figure>
+    
+    <p>
+      That might look a little fuzzy, but we're not quite done yet.
+    </p>
 
     <p>
-      If we then add the shaded height map as a 70% transparent overlay,
+      We can then add the shaded height map as a 70% transparent overlay,
       (without blurring this time), we can bring out the geographic features and
       end up with a kick-ass looking 2D map!
     </p>
