🐵🍬 Checkpoint ./index.html:2209215/93 ./script.js:2209215/162 ./js/utils.js:2209215/3937 ./js/read-png.js:2209215/1857

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 
     <p>
       If we add the shaded height map as a 70% transparent overlay to the previous
-      view (without blurring this time), we can both highlight and "crisp up"bring out the geographic features and
-      end up with a kick-ass looking 2D map!
+      view (without blurring this time), we end up highlighting and "crisping up"
+      all the landscape features, and end up with a kick-ass looking 2D map!
     </p>
 
     <p>
