🍗👡 Checkpoint ./index.html:2209215/255

--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
     </p>
 
     <p>— <a href="https://mastodon.social/@TheRealPomax">Pomax</a></p>
+    
+    <hr style="margin:3em 0;">
+    
+    <p style="text-align:center">
+      <a href="https://support.glitch.com/t/turning-height-map-images-into-sweet-2d-maps/63039/2">Discuss this page on the Glitch forum!</a>
+    </p>
 
     <!-- The footer holds our remix button — you can keep or delete it ✂ -->
     <footer class="footer">
