--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       >
       algorithm, find all regions that have the same general elevation so that
       we get lines that separate different altitudes. For example, if we picked
-      a 100 foot spacing, we can get one line that serpates "everything between
+      a 100 foot spacing, we can get one line that separates "everything between
       100 feet and 200 feet", another for "everything between 200 feet and 300
       feet", and so on.
     </p>
@@ -136,10 +136,10 @@
     </p>
 
     <ul>
-      <li>light green for low altitudes</li>
-      <li>darker green for slightly higher altitudes</li>
+      <li>light green for low altitudes,</li>
+      <li>darker green for slightly higher altitudes,</li>
       <li>brown for high altitudes with less/no vegetation, and</li>
-      <li>blue/white (snow) for really high altitudes</li>
+      <li>blue/white for really high altitudes, to fake some snow.</li>
     </ul>
 
     <p>Which gives us something that looks like this:</p>
